- add S3 backups - add /health healthcheck endpoint - use s6 to handle tasks interally in the container instead of scripts - remove unnecessary docker-related files in /backend - deprecate old startup scripts
